learn/istio/mirroring/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mirror
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: mirror
spec:
  selector:
    app: nginx
  ports:
  - name: httpd
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-v1
  namespace: mirror
  labels:
    app: nginx
    version: v1
spec:
  containers:
  - name: nginx-v1
    image: nginx
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: nginx-html
      mountPath: /usr/share/nginx/html/index.html
      subPath: nginx-v1
  volumes:
  - name: nginx-html
    configMap:
      name: nginx-html
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-v2
  namespace: mirror
  labels:
    app: nginx
    version: v2
spec:
  containers:
  - name: nginx-v2
    image: nginx
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: nginx-html
      mountPath: /usr/share/nginx/html/index.html
      subPath: nginx-v2
  volumes:
  - name: nginx-html
    configMap:
      name: nginx-html
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    image: busybox:1.28
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh","-c","sleep 360000"]
