learn/istio/mirroring/istio-mirror.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpd
  namespace: mirror
spec:
  hosts:
  - nginx.mirror.svc.cluster.local
  http:
  - route:
    - destination: 
        host: nginx.mirror.svc.cluster.local
        subset: v1
      weight: 100
    mirror:
      host: nginx.mirror.svc.cluster.local
      subset: v2
    mirrorPercent: 100
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpd
  namespace: mirror
spec:
  host: nginx.mirror.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
